--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </select>
         </div>
 
-        <h1 id="app-title">Only Weather</h1>
+        <h1 id="app-title">OnlyWeathers</h1>
         
         <!-- Weather Inputs -->
         <div>
