--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OnlyWeathers</title>
+    <title>Only Weather</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,7 +29,7 @@
             </select>
         </div>
 
-        <h1 id="app-title">OnlyWeathers</h1>
+        <h1 id="app-title">Only Weather</h1>
         
         <!-- Weather Inputs -->
         <div>
