--- a/index.html
+++ b/index.html
@@ -1,48 +1,238 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Only Weather</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Berliva Tax</title>
+  <link rel="icon" href="/favicon.ico" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    :root{
+      /* ---- KOLAYCA DEĞİŞTİR ---- */
+      --brand-bg: #0b1220;    /* arka plan (koyu kurumsal) */
+      --brand-accent: #0ea5e9;/* aksan rengi (mavi) */
+    }
+    html{scroll-behavior:smooth}
+    body{background:var(--brand-bg)}
+    .accent{color:var(--brand-accent)}
+    .ring-accent{--tw-ring-color: color-mix(in oklab, var(--brand-accent) 70%, transparent)}
+  </style>
 </head>
-<body>
-    <div class="container mt-5">
-        <!-- Language Toggle on the top-left -->
-        <div id="language-toggle">
-            <select id="language" class="form-control mb-3 w-25">
-                <option value="en">English</option>
-                <option value="es">Español</option>
-                <option value="fr">Français</option>
-                <option value="de">Deutsch</option>
-                <option value="it">Italiano</option>
-                <option value="ru">Русский</option>
-                <option value="zh">中文</option>
-                <option value="ja">日本語</option>
-                <option value="ko">한국어</option>
-                <option value="ar">العربية</option>
-                <option value="tr">Türkçe</option>
-                <option value="hi">हिन्दी</option>
-                <option value="pt">Português</option>
-                <option value="pl">Polski</option>
-                <option value="nl">Nederlands</option>
-            </select>
+<body class="min-h-screen text-slate-100 selection:bg-sky-300/20">
+  <!-- HEADER -->
+  <header class="sticky top-0 z-50 border-b border-slate-800/60 bg-[color:var(--brand-bg)]/90 backdrop-blur">
+    <div class="mx-auto flex max-w-6xl items-center justify-between px-4 py-3 md:px-6">
+      <a href="#home" class="flex items-center gap-3">
+        <!-- LOGO: logo.svg dosyan varsa aşağıdaki <img> satırını aç -->
+        <!-- <img src="logo.svg" alt="Berliva Tax" class="h-9 w-9 rounded-xl"> -->
+        <!-- Inline basit SVG logo (isteğe göre kalsın): -->
+        <svg viewBox="0 0 48 48" class="h-9 w-9 rounded-xl" aria-hidden="true">
+          <defs>
+            <linearGradient id="g" x1="0" x2="1" y1="0" y2="1">
+              <stop offset="0" stop-color="#1f2937"/>
+              <stop offset="1" stop-color="#0b1220"/>
+            </linearGradient>
+          </defs>
+          <rect x="0" y="0" width="48" height="48" rx="12" fill="url(#g)" stroke="var(--brand-accent)"/>
+          <path d="M14 14h14c4.5 0 8 3.5 8 8s-3.5 8-8 8H14z" fill="none" stroke="var(--brand-accent)" stroke-width="2.2"/>
+          <text x="17" y="30" font-size="14" fill="white" font-family="ui-sans-serif, system-ui" font-weight="700">B</text>
+        </svg>
+        <span class="text-lg font-semibold tracking-tight">Berliva Tax</span>
+      </a>
+      <nav class="hidden items-center gap-6 md:flex text-sm">
+        <a href="#home" class="text-slate-300 hover:text-white" data-i="nav.home"></a>
+        <a href="#about" class="text-slate-300 hover:text-white" data-i="nav.about"></a>
+        <a href="#services" class="text-slate-300 hover:text-white" data-i="nav.services"></a>
+        <a href="#contact" class="text-slate-300 hover:text-white" data-i="nav.contact"></a>
+      </nav>
+      <div class="flex items-center gap-2">
+        <button data-lang="tr" class="langbtn rounded-lg px-2.5 py-1.5 text-sm font-medium ring-1">TR</button>
+        <button data-lang="de" class="langbtn rounded-lg px-2.5 py-1.5 text-sm font-medium ring-1">DE</button>
+        <button data-lang="en" class="langbtn rounded-lg px-2.5 py-1.5 text-sm font-medium ring-1">EN</button>
+      </div>
+    </div>
+  </header>
+
+  <!-- HERO -->
+  <section id="home" class="scroll-mt-24 py-16 md:py-24">
+    <div class="mx-auto max-w-6xl px-4 md:px-6 grid items-center gap-10 md:grid-cols-2">
+      <div class="space-y-6">
+        <span class="inline-flex items-center rounded-full border border-slate-700/60 bg-slate-800/60 px-3 py-1 text-sm">Berliva Tax</span>
+        <h1 class="text-3xl font-semibold leading-tight tracking-tight md:text-4xl" data-i="hero.title"></h1>
+        <p class="text-slate-300 md:text-lg" data-i="hero.subtitle"></p>
+        <div class="flex items-center gap-3">
+          <a href="#contact" class="rounded-xl bg-[color:var(--brand-accent)] px-5 py-3 text-sm font-semibold text-white shadow-sm ring-1 ring-accent hover:brightness-110" data-i="hero.cta"></a>
+          <a href="#services" class="rounded-xl px-5 py-3 text-sm font-semibold text-[color:var(--brand-accent)] ring-1 ring-slate-700 hover:bg-slate-900" data-i="nav.services"></a>
+        </div>
+        <div class="flex flex-wrap gap-2 pt-2 text-xs text-slate-400">
+          <span class="inline-flex items-center rounded-full border border-slate-700/60 bg-slate-800/60 px-3 py-1">Buchhaltung</span>
+          <span class="inline-flex items-center rounded-full border border-slate-700/60 bg-slate-800/60 px-3 py-1">Steuererklärung</span>
+          <span class="inline-flex items-center rounded-full border border-slate-700/60 bg-slate-800/60 px-3 py-1">Lohnabrechnung</span>
+          <span class="inline-flex items-center rounded-full border border-slate-700/60 bg-slate-800/60 px-3 py-1">Finanzamt</span>
+          <span class="inline-flex items-center rounded-full border border-slate-700/60 bg-slate-800/60 px-3 py-1">Consulting</span>
+        </div>
+      </div>
+      <div class="relative">
+        <div class="aspect-[4/3] w-full overflow-hidden rounded-2xl border border-slate-800 bg-gradient-to-br from-slate-900 to-slate-800 p-8 shadow-xl grid place-items-center text-center">
+          <div>
+            <div class="text-6xl">🧾</div>
+            <p class="mt-3 text-slate-300"><span data-i="nav.services"></span> • <span data-i="nav.about"></span> • <span data-i="nav.contact"></span></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- ABOUT -->
+  <section id="about" class="scroll-mt-24 py-16 md:py-24">
+    <div class="mx-auto max-w-4xl px-4 md:px-6">
+      <h2 class="text-2xl font-semibold tracking-tight" data-i="about.title"></h2>
+      <p class="mt-4 text-slate-300 md:text-lg" data-i="about.body"></p>
+    </div>
+  </section>
+
+  <!-- SERVICES -->
+  <section id="services" class="scroll-mt-24 py-16 md:py-24">
+    <div class="mx-auto max-w-6xl px-4 md:px-6">
+      <h2 class="text-2xl font-semibold tracking-tight" data-i="services.title"></h2>
+      <div id="servicesGrid" class="mt-8 grid gap-5 sm:grid-cols-2 lg:grid-cols-3"></div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact" class="scroll-mt-24 py-16 md:py-24">
+    <div class="mx-auto max-w-4xl px-4 md:px-6">
+      <h2 class="text-2xl font-semibold tracking-tight" data-i="contact.title"></h2>
+      <p class="mt-4 text-slate-300 md:text-lg" data-i="contact.text"></p>
+
+      <div class="mt-8 grid gap-6 rounded-2xl border border-slate-800 bg-slate-900/60 p-6 md:grid-cols-2">
+        <div class="space-y-3">
+          <div>
+            <div class="text-sm text-slate-400" data-i="contact.person"></div>
+            <div class="text-lg font-semibold tracking-tight">Berliva Tax</div>
+          </div>
+          <div class="space-y-1 text-sm">
+            <div><span class="text-slate-400" data-i="contact.phoneLabel"></span>: <a class="hover:underline" href="tel:+49123456789">+49 123 456 789</a></div>
+            <div><span class="text-slate-400" data-i="contact.emailLabel"></span>: <a class="hover:underline" href="mailto:info@berliva.com">info@berliva.com</a></div>
+          </div>
         </div>
 
-        <h1 id="app-title" class="text-center mb-4">Only Weather</h1>
-        
-        <!-- Weather Inputs -->
-        <div>
-            <input type="text" id="city-input" class="form-control mb-3" placeholder="Enter your city" />
-            <button onclick="getWeather()" id="get-weather-btn" class="btn btn-primary mb-3">Get Weather</button>       
-        <div id="current-weather" class="mt-4"></div>
-
-        <!-- Forecast Header -->
-        <div id="forecast-header" class="mt-5 font-weight-bold">5-Day Forecast</div>
-        
-        <div id="forecast" class="d-flex flex-wrap mt-3"></div>
+        <form onsubmit="event.preventDefault()" class="grid gap-3">
+          <input class="w-full rounded-xl border border-slate-700 bg-slate-900 px-4 py-3 text-sm outline-none placeholder:text-slate-500 focus:ring-2 focus:ring-[color:var(--brand-accent)]" id="nameInput" placeholder="Adınız" required />
+          <input class="w-full rounded-xl border border-slate-700 bg-slate-900 px-4 py-3 text-sm outline-none placeholder:text-slate-500 focus:ring-2 focus:ring-[color:var(--brand-accent)]" id="mailInput" placeholder="E-postanız" type="email" required />
+          <textarea rows="4" class="w-full rounded-xl border border-slate-700 bg-slate-900 px-4 py-3 text-sm outline-none placeholder:text-slate-500 focus:ring-2 focus:ring-[color:var(--brand-accent)]" id="msgInput" placeholder="Mesajınız"></textarea>
+          <button class="rounded-xl bg-[color:var(--brand-accent)] px-5 py-3 text-sm font-semibold text-white ring-1 ring-accent hover:brightness-110" id="sendBtn">Gönder</button>
+          <p class="text-xs text-slate-400" id="formNote">Bu form temsili amaçlıdır. Lütfen info@berliva.com adresine e‑posta gönderin.</p>
+        </form>
+      </div>
     </div>
+  </section>
 
-    <script src="script.js"></script>
+  <!-- FOOTER -->
+  <footer class="mt-16 border-t border-slate-800/60 bg-[color:var(--brand-bg)]/90">
+    <div class="mx-auto flex max-w-6xl flex-col items-center justify-between gap-3 px-4 py-6 text-sm text-slate-400 md:flex-row md:px-6">
+      <div id="footerText">© 2025 Berliva Tax. Tüm hakları saklıdır.</div>
+      <div class="flex items-center gap-4">
+        <a href="#home" class="hover:text-slate-200" data-i="nav.home"></a>
+        <a href="#about" class="hover:text-slate-200" data-i="nav.about"></a>
+        <a href="#services" class="hover:text-slate-200" data-i="nav.services"></a>
+        <a href="#contact" class="hover:text-slate-200" data-i="nav.contact"></a>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    // --- İÇERİK (TR/DE/EN) ---
+    const content = {
+      tr: {
+        nav:{home:"Ana Sayfa",about:"Hakkımızda",services:"Hizmetlerimiz",contact:"İletişim"},
+        hero:{title:"Berlin'de Türkçe vergi danışmanınız.",subtitle:"Buchhaltung, Steuererklärung, Lohnabrechnung ve Finanzamt yazışmalarında yanınızdayız.",cta:"Hemen iletişime geç"},
+        about:{title:"Hakkımızda",body:"Berliva Tax, Berlin merkezli bir muhasebe ve vergi danışmanlığı ofisidir. Hizmetlerimizi Türkçe, Almanca ve İngilizce sunar; bireyler ve işletmeler için mevzuata uyumlu, şeffaf ve güvenilir süreçler tasarlarız."},
+        services:{title:"Hizmetlerimiz",list:[
+          {name:"Vergi Danışmanlığı",desc:"Şahıs ve şirketler için vergi planlaması, yıl içi danışmanlık."},
+          {name:"Steuererklärung (Beyanname)",desc:"Çalışan, serbest meslek ve şirket beyannameleri; Anlage N, S, G vb."},
+          {name:"Buchhaltung (Muhasebe)",desc:"Faturalar, banka hareketleri, KDV (USt-VA) ön beyannameleri."},
+          {name:"Lohn & Gehalt",desc:"Maaş bordroları ve sosyal sigorta bildirimleri."},
+          {name:"Finanzamt Yazışmaları",desc:"Resmî yazışmalar, randevu takibi, itiraz ve temsil."},
+          {name:"Kuruluş & Danışmanlık",desc:"Şirket kuruluşu, yükümlülükler ve paket çözümler."}
+        ]},
+        contact:{title:"İletişim",text:"Sorularınız ve randevu talepleriniz için bizimle iletişime geçin.",person:"Max Mustermann",phoneLabel:"Telefon",emailLabel:"E‑posta"},
+        footer:"© 2025 Berliva Tax. Tüm hakları saklıdır.",
+        placeholders:{name:"Adınız",mail:"E‑postanız",msg:"Mesajınız",send:"Gönder",note:"Bu form temsili amaçlıdır. Lütfen info@berliva.com adresine e‑posta gönderin."}
+      },
+      de: {
+        nav:{home:"Start",about:"Über uns",services:"Leistungen",contact:"Kontakt"},
+        hero:{title:"Ihr türkischsprachiger Steuerberater in Berlin.",subtitle:"Buchhaltung, Steuererklärungen, Lohnabrechnung und Korrespondenz mit dem Finanzamt.",cta:"Kontakt aufnehmen"},
+        about:{title:"Über uns",body:"Berliva Tax ist ein Berliner Büro für Buchhaltung und Steuerberatung. Wir bieten klare Lösungen auf Türkisch, Deutsch und Englisch – transparent, gesetzeskonform, verlässlich."},
+        services:{title:"Leistungen",list:[
+          {name:"Steuerberatung",desc:"Steuerplanung und laufende Beratung."},
+          {name:"Steuererklärungen",desc:"Angestellte, Selbständige, Unternehmen; Anlage N/S/G."},
+          {name:"Buchhaltung",desc:"Rechnungen, Bankbewegungen, USt‑VA."},
+          {name:"Lohn & Gehalt",desc:"Lohnabrechnungen und Sozialmeldungen."},
+          {name:"Finanzamt‑Korrespondenz",desc:"Schriftverkehr, Termine, Einsprüche, Vertretung."},
+          {name:"Gründung & Beratung",desc:"Firmengründung und Paketlösungen."}
+        ]},
+        contact:{title:"Kontakt",text:"Schreiben oder rufen Sie uns gerne an – wir freuen uns auf Ihre Anfrage.",person:"Max Mustermann",phoneLabel:"Telefon",emailLabel:"E‑Mail"},
+        footer:"© 2025 Berliva Tax. Alle Rechte vorbehalten.",
+        placeholders:{name:"Ihr Name",mail:"Ihre E‑Mail",msg:"Ihre Nachricht",send:"Senden",note:"Dieses Formular ist ein Platzhalter. Bitte schreiben Sie an info@berliva.com."}
+      },
+      en: {
+        nav:{home:"Home",about:"About",services:"Services",contact:"Contact"},
+        hero:{title:"Your Turkish‑speaking tax advisor in Berlin.",subtitle:"Bookkeeping, tax returns, payroll, and correspondence with the tax office.",cta:"Contact us"},
+        about:{title:"About",body:"Berliva Tax is a Berlin‑based accounting and tax advisory practice. Clear, compliant, and transparent processes in Turkish, German, and English."},
+        services:{title:"Our Services",list:[
+          {name:"Tax Advisory",desc:"Tax planning and ongoing advice."},
+          {name:"Tax Returns",desc:"Employees, freelancers, companies; Anlage N/S/G."},
+          {name:"Bookkeeping",desc:"Invoices, bank transactions, VAT advance returns."},
+          {name:"Payroll",desc:"Payslips and social insurance notifications."},
+          {name:"Tax Office Correspondence",desc:"Letters, appointments, appeals, representation."},
+          {name:"Company Setup & Advisory",desc:"Entity formation and bundled solutions."}
+        ]},
+        contact:{title:"Contact",text:"Get in touch for questions or to schedule an appointment.",person:"Max Mustermann",phoneLabel:"Phone",emailLabel:"Email"},
+        footer:"© 2025 Berliva Tax. All rights reserved.",
+        placeholders:{name:"Your name",mail:"Your email",msg:"Your message",send:"Send",note:"This form is a placeholder. Please email info@berliva.com."}
+      }
+    };
+
+    function render(lang){
+      const t = content[lang];
+      document.querySelectorAll("[data-i]").forEach(el=>{
+        const path = el.getAttribute("data-i").split(".");
+        let cur = t; path.forEach(p=>cur=cur[p]);
+        el.textContent = cur;
+      });
+      // services
+      const grid = document.getElementById("servicesGrid");
+      grid.innerHTML = "";
+      t.services.list.forEach(s=>{
+        const card = document.createElement("div");
+        card.className = "rounded-2xl border border-slate-800/80 bg-slate-900/60 p-5 shadow-sm hover:shadow-md";
+        card.innerHTML = `<h3 class="text-base font-semibold tracking-tight">${s.name}</h3>
+                          <p class="mt-2 text-sm text-slate-300">${s.desc}</p>`;
+        grid.appendChild(card);
+      });
+      // placeholders & labels
+      document.getElementById("nameInput").placeholder = t.placeholders.name;
+      document.getElementById("mailInput").placeholder = t.placeholders.mail;
+      document.getElementById("msgInput").placeholder = t.placeholders.msg;
+      document.getElementById("sendBtn").textContent = t.placeholders.send;
+      document.getElementById("formNote").textContent = t.placeholders.note;
+      document.getElementById("footerText").textContent = t.footer;
+      // buttons style
+      document.querySelectorAll(".langbtn").forEach(b=>{
+        const active = b.getAttribute("data-lang") === lang;
+        b.className = "langbtn rounded-lg px-2.5 py-1.5 text-sm font-medium tracking-tight ring-1 transition "
+          + (active ? "bg-[color:var(--brand-accent)] text-white ring-accent"
+                    : "bg-slate-900 text-slate-300 ring-slate-700 hover:bg-slate-800");
+      });
+    }
+
+    document.querySelectorAll(".langbtn").forEach(btn=>{
+      btn.addEventListener("click", ()=>render(btn.getAttribute("data-lang")));
+    });
+
+    // Varsayılan dil
+    render("tr");
+  </script>
 </body>
 </html>
